--- a/src/__typography.html
+++ b/src/__typography.html
@@ -331,82 +331,82 @@
         <!--==============================-->
         @@include('_tpl_title-anchor.html', { "taId": "buttonsDef", "taText": "Дефолтные кнопки", "taTag": "h4" })
         <div class="layout-text buttonsWrap">
-          <a href="#" class="btn-default">Link</a> <br>
+          <a href="#" class="btn-def">Link</a> <br>
           <!--==============================-->
-          <button class="btn-default">Button</button>
+          <button class="btn-def">Button</button>
           <br>
           <!--==============================-->
-          <input class="btn-default" type="submit" value="Type submit">
-          <input class="btn-default" type="button" value="Type button">
-          <input class="btn-default" type="reset" value="Type reset">
+          <input class="btn-def" type="submit" value="Type submit">
+          <input class="btn-def" type="button" value="Type button">
+          <input class="btn-def" type="reset" value="Type reset">
         </div>
 
         <!--==============================-->
         @@include('_tpl_title-anchor.html', { "taId": "buttonsDefDisabled", "taText": "Дефолтные кнопки (неактивные)", "taTag": "h4" })
         <div class="layout-text buttonsWrap">
-          <a href="javascript:void(0)" class="btn-default disabled">Link (.disabled)</a> <a href="javascript:void(0)" class="btn-default" data-disabled>Link (data-disabled)</a> <br>
+          <a href="javascript:void(0)" class="btn-def disabled">Link (.disabled)</a> <a href="javascript:void(0)" class="btn-def" data-disabled>Link (data-disabled)</a> <br>
           <!--==============================-->
-          <button class="btn-default disabled">Button (.disabled)</button>
-          <button class="btn-default" data-disabled>Button (data-disabled)</button>
+          <button class="btn-def disabled">Button (.disabled)</button>
+          <button class="btn-def" data-disabled>Button (data-disabled)</button>
           <br>
           <!--==============================-->
-          <input class="btn-default" type="submit" value="Type submit" disabled>
-          <input class="btn-default" type="button" value="Type button" disabled>
-          <input class="btn-default" type="reset" value="Type reset" disabled>
+          <input class="btn-def" type="submit" value="Type submit" disabled>
+          <input class="btn-def" type="button" value="Type button" disabled>
+          <input class="btn-def" type="reset" value="Type reset" disabled>
         </div>
 
         <!--==============================-->
         @@include('_tpl_title-anchor.html', { "taId": "buttonsAlt", "taText": "Альтернативные кнопки", "taTag": "h4" })
         <div class="layout-text buttonsWrap">
-          <a href="#" class="btn-default-alt">Отправить заявку</a> <br>
+          <a href="#" class="btn-alt">Отправить заявку</a> <br>
           <!--==============================-->
-          <button class="btn-default-alt">Button</button>
+          <button class="btn-alt">Button</button>
           <br>
           <!--==============================-->
-          <input class="btn-default-alt" type="submit" value="Type submit">
-          <input class="btn-default-alt" type="button" value="Type button">
-          <input class="btn-default-alt" type="reset" value="Type reset">
+          <input class="btn-alt" type="submit" value="Type submit">
+          <input class="btn-alt" type="button" value="Type button">
+          <input class="btn-alt" type="reset" value="Type reset">
         </div>
 
         <!--==============================-->
         @@include('_tpl_title-anchor.html', { "taId": "buttonsAltDisabled", "taText": "Альтернативные кнопки (неактивные)", "taTag": "h4" })
         <div class="layout-text buttonsWrap">
-          <a href="javascript:void(0)" class="btn-default-alt disabled">Отправить заявку (.disabled)</a> <a href="javascript:void(0)" class="btn-default-alt" data-disabled>Отправить заявку (data-disabled)</a> <br>
+          <a href="javascript:void(0)" class="btn-alt disabled">Отправить заявку (.disabled)</a> <a href="javascript:void(0)" class="btn-alt" data-disabled>Отправить заявку (data-disabled)</a> <br>
           <!--==============================-->
-          <button class="btn-default-alt disabled">Button (.disabled)</button>
-          <button class="btn-default-alt" data-disabled>Button (data-disabled)</button>
+          <button class="btn-alt disabled">Button (.disabled)</button>
+          <button class="btn-alt" data-disabled>Button (data-disabled)</button>
           <br>
           <!--==============================-->
-          <input class="btn-default-alt" type="submit" value="Type submit" disabled>
-          <input class="btn-default-alt" type="button" value="Type button" disabled>
-          <input class="btn-default-alt" type="reset" value="Type reset" disabled>
+          <input class="btn-alt" type="submit" value="Type submit" disabled>
+          <input class="btn-alt" type="button" value="Type button" disabled>
+          <input class="btn-alt" type="reset" value="Type reset" disabled>
         </div>
 
         <!--==============================-->
         @@include('_tpl_title-anchor.html', { "taId": "buttonsWithIcon", "taText": "Кнопки с иконкой", "taTag": "h4" })
         <div class="layout-text buttonsWrap">
           <!--==============================-->
-          <a href="#" class="btn-default btn-with-icon"> @@include("includes/svg/icon-send.svg") <span>Заказать</span> </a>
+          <a href="#" class="btn-def btn-with-icon"> @@include("includes/svg/icon-send.svg") <span>Заказать</span> </a>
           <!--==============================-->
-          <button class="btn-default btn-with-icon">
+          <button class="btn-def btn-with-icon">
             @@include("includes/svg/icon-send.svg") <span>Отправить</span>
           </button>
           <!--==============================-->
-          <button class="btn-default btn-with-icon">
+          <button class="btn-def btn-with-icon">
             <span>Send</span> @@include("includes/svg/icon-send.svg")
           </button>
           <!--==============================-->
-          <button class="btn-default btn-with-icon">
+          <button class="btn-def btn-with-icon">
             @@include("includes/svg/icon-arr--sm--left.svg") <span>Вернуться к каталогу</span>
           </button>
           <!--==============================-->
           <br> <code>width: 250px</code><br>
-          <button class="btn-default btn-with-icon">
+          <button class="btn-def btn-with-icon">
             @@include("includes/svg/icon-arr--sm--left.svg") <span>Вернуться на шаг назад</span>
           </button>
           <!--==============================-->
           <br> <code>width: 250px</code><br>
-          <button class="btn-default btn-with-icon">
+          <button class="btn-def btn-with-icon">
             <span>Перейти на шаг вперед</span> @@include("includes/svg/icon-arr--sm--left.svg")
           </button>
         </div>
@@ -415,27 +415,27 @@
         @@include('_tpl_title-anchor.html', { "taId": "buttonsWithIconDisabled", "taText": "Кнопки с иконкой (неактивные)", "taTag": "h4" })
         <div class="layout-text buttonsWrap">
           <!--==============================-->
-          <a href="#" class="btn-default btn-with-icon disabled"> @@include("includes/svg/icon-send.svg") <span>Заказать</span> </a>
+          <a href="#" class="btn-def btn-with-icon disabled"> @@include("includes/svg/icon-send.svg") <span>Заказать</span> </a>
           <!--==============================-->
-          <button class="btn-default btn-with-icon" disabled>
+          <button class="btn-def btn-with-icon" disabled>
             @@include("includes/svg/icon-send.svg") <span>Отправить</span>
           </button>
           <!--==============================-->
-          <button class="btn-default btn-with-icon" disabled>
+          <button class="btn-def btn-with-icon" disabled>
             <span>Send</span> @@include("includes/svg/icon-send.svg")
           </button>
           <!--==============================-->
-          <button class="btn-default btn-with-icon" disabled>
+          <button class="btn-def btn-with-icon" disabled>
             @@include("includes/svg/icon-arr--sm--left.svg") <span>Вернуться к каталогу</span>
           </button>
           <!--==============================-->
           <br> <code>width: 250px</code> <br>
-          <button class="btn-default btn-with-icon" disabled>
+          <button class="btn-def btn-with-icon" disabled>
             @@include("includes/svg/icon-arr--sm--left.svg") <span>Вернуться на шаг назад</span>
           </button>
           <!--==============================-->
           <br> <code>width: 250px</code> <br>
-          <button class="btn-default btn-with-icon" disabled>
+          <button class="btn-def btn-with-icon" disabled>
             <span>Перейти на шаг вперед</span> @@include("includes/svg/icon-arr--sm--left.svg")
           </button>
         </div>
@@ -443,19 +443,19 @@
         <!--==============================-->
         @@include('_tpl_title-anchor.html', { "taId": "buttonsWithArr", "taText": "Кнопки со стрелками", "taTag": "h4" })
         <div class="layout-text buttonsWrap">
-          <a href="#" class="btn-default btn-with-arrow"><span>Смотреть все</span><i>&nbsp;</i></a> <a href="#" class="btn-default btn-with-arrow"><i>&nbsp;</i><span>Вернуться к каталогу</span></a> <br>
+          <a href="#" class="btn-def btn-with-arrow"><span>Смотреть все</span><i>&nbsp;</i></a> <a href="#" class="btn-def btn-with-arrow"><i>&nbsp;</i><span>Вернуться к каталогу</span></a> <br>
           <!--==============================-->
-          <a href="#" class="btn-default-alt btn-with-arrow"><span>Смотреть все</span><i>&nbsp;</i></a> <a href="#" class="btn-default-alt btn-with-arrow"><i>&nbsp;</i><span>Вернуться к каталогу</span></a>
+          <a href="#" class="btn-alt btn-with-arrow"><span>Смотреть все</span><i>&nbsp;</i></a> <a href="#" class="btn-alt btn-with-arrow"><i>&nbsp;</i><span>Вернуться к каталогу</span></a>
         </div>
 
         <!--==============================-->
         @@include('_tpl_title-anchor.html', { "taId": "buttonsWithArrDisabled", "taText": "Кнопки со стрелками (неактивные)", "taTag": "h4" })
         <div class="layout-text buttonsWrap">
-          <a href="#" class="btn-default btn-with-arrow disabled"><span>Смотреть все</span><i>&nbsp;</i></a> <a href="#" class="btn-default btn-with-arrow disabled"><i>&nbsp;</i><span>Вернуться к каталогу</span></a>
+          <a href="#" class="btn-def btn-with-arrow disabled"><span>Смотреть все</span><i>&nbsp;</i></a> <a href="#" class="btn-def btn-with-arrow disabled"><i>&nbsp;</i><span>Вернуться к каталогу</span></a>
           <br>
           <!--==============================-->
-          <a href="#" class="btn-default-alt btn-with-arrow disabled"><span>Смотреть все</span><i>&nbsp;</i></a>
-          <a href="#" class="btn-default-alt btn-with-arrow disabled"><i>&nbsp;</i><span>Вернуться к каталогу</span></a>
+          <a href="#" class="btn-alt btn-with-arrow disabled"><span>Смотреть все</span><i>&nbsp;</i></a>
+          <a href="#" class="btn-alt btn-with-arrow disabled"><i>&nbsp;</i><span>Вернуться к каталогу</span></a>
         </div>
         <!--===============buttons end===============-->
 
@@ -580,12 +580,6 @@
           @@loop("_tpl_feature-list-item.html", "includes/json/feature-list-item.json")
         </div>
         <!--===============feature-list end===============-->
-
-        <div class="user-spacer">&nbsp;</div>
-
-        <!--===============icons list===============-->
-        @@include('_tpl_title-anchor.html', { "taId": "iconsList", "taText": "Иконки" }) @@include("_tpl_typography_icons-list.html")
-        <!--===============icons list end===============-->
 
         <div class="user-spacer">&nbsp;</div>
 
