--- a/src/_tpl_forms_textarea.html
+++ b/src/_tpl_forms_textarea.html
@@ -1,4 +1,4 @@
-<label for="@@id">@@label <mark>*</mark></label>
+@@if(context.label){<label for="@@id">@@label <mark>*</mark></label>}
 <textarea
     class="form-def"
     id="@@id"
