--- a/src/_tpl_search-page-bitrix.html
+++ b/src/_tpl_search-page-bitrix.html
@@ -1,6 +1,6 @@
 <form action="#" method="get">
   <input type="text" name="q" value="поиск" size="40">&nbsp;<input type="submit" value="Искать">
-  <input class="btn-default" type="hidden" name="how" value="r">
+  <input class="btn-def" type="hidden" name="how" value="r">
 </form>
 <br>
 <div class="search-page">
