--- a/src/404.html
+++ b/src/404.html
@@ -22,9 +22,9 @@
   <meta property="og:locale" content="ru_RU">
   <meta property="og:url" content="http://localhost:3000/index.html">
   <meta property="og:title" content="Название">
-  <meta property="og:image" content="http://localhost:3000/apple-touch-icon.png">
-  <meta property="og:image:height" content="256">
-  <meta property="og:image:width" content="256">
+  <meta property="og:image" content="http://localhost:3000/share.jpg">
+  <meta property="og:image:height" content="630">
+  <meta property="og:image:width" content="1200">
   <meta property="og:description" content="Описание">
   <meta property="og:site_name" content="Расширенное название">
   <!--Favicon-->
@@ -252,16 +252,13 @@
   <!--MAIN-->
   <main class="main" role="main">
     <div class="layout-page layout-page-spaces">
-      <div class="main__holder">
-        <!--CONTENT-->
-        <div class="content-wrap">
-          <div class="content article-content">
-            <h1>Page Not Found</h1>
-            <p>Sorry, but the page you were trying to view does not exist.</p>
-          </div>
-        </div>
-        <!--CONTENT end-->
+      <!--CONTENT-->
+      <div class="article-content">
+        <h1>Page Not Found</h1>
+        <p>Sorry, but the page you were trying to view does not exist.</p>
+        <p><a href="index.html">Home page</a></p>
       </div>
+      <!--CONTENT end-->
     </div>
   </main>
   <!--MAIN end-->
