--- a/src/__404.html
+++ b/src/__404.html
@@ -4,24 +4,19 @@
 })
 
 <!--HEADER-->
-@@include('_tpl_layout_header.html', {
-  "currentItem": "Типографика"
-})
+@@include('_tpl_layout_header.html', { "currentItem": "" })
 <!--HEADER end-->
 
 <!--MAIN-->
 <main class="main" role="main">
   <div class="layout-page layout-page-spaces">
-    <div class="main__holder">
-      <!--CONTENT-->
-      <div class="content-wrap">
-        <div class="content article-content">
-          <h1>Page Not Found</h1>
-          <p>Sorry, but the page you were trying to view does not exist.</p>
-        </div>
-      </div>
-      <!--CONTENT end-->
+    <!--CONTENT-->
+    <div class="article-content">
+      <h1>Page Not Found</h1>
+      <p>Sorry, but the page you were trying to view does not exist.</p>
+      <p><a href="index.html">Home page</a></p>
     </div>
+    <!--CONTENT end-->
   </div>
 </main>
 <!--MAIN end-->
