--- a/src/_tpl_forms_input.html
+++ b/src/_tpl_forms_input.html
@@ -1,4 +1,4 @@
-<label for="@@id">@@label <mark>*</mark></label>
+@@if(context.label){<label for="@@id">@@label <mark>*</mark></label>}
 <input
     class="form-def field-js"
     id="@@id"
