--- a/src/_tpl_forms_user-form.html
+++ b/src/_tpl_forms_user-form.html
@@ -1,63 +1,42 @@
 <div class="user-form">
-  <div class="form-title max-wrap-text push-auto">@@title</div>
-  <form action="#!" method="post" class="max-wrap-text push-auto">
-    @@loop("_tpl_forms_field-old.html", [
-      {
-        "wrap": "true",
-        "type": "text",
-        "ph": "Enter Your Name",
-        "id": "uf-name",
+  <div class="form-title">@@title</div>
+  <form action="#" method="post" class="form-validate-js">
+    <div class="form-group">
+      <div class="form-group__item">
+        @@include("_tpl_forms_input.html", {
         "label": "Name:",
-        "required": "true",
-        "valid": "true",
-        "error": "Please enter your name, please"
-      }, {
-        "wrap": "true",
-        "type": "email",
-        "ph": "Enter Your Email",
-        "id": "uf-email",
-        "label": "Email:",
-        "required": "true",
-        "valid": "true",
-        "error": "Please enter a valid email address"
-      }, {
-        "wrap": "true",
-        "type": "textarea",
-        "ph": "Enter Message",
-        "id": "uf-message",
-        "label": "Message:",
-        "required": ""
-      }
-    ])
-    @@include("_tpl_forms_field-old.html", {
-      "wrap": "true",
-      "type": "file",
-      "id": "uf-file",
-      "label": "Load files:",
-      "multiple": "multiple"
-    })
-    <div class="input-wrap">
-      <div class="label-holder">
-        <label for="form-captcha">Security Check:<span class="form-mark">*</span></label>
+        "id": "uf-name",
+        "placeholder": "Enter Your Name"
+        })
+        @@include("_tpl_forms_valid.html", {"error": "Please enter your name, please"})
       </div>
-      <div class="input-holder">
-        <div class="captcha">
-          <img src="img/captcha.jpg" alt="captcha" />
-          <input type="text" id="form-captcha" required>
-          @@include('_tpl_forms_valid-old.html', {"error": "Enter text in this image", "success": "The verification was successful!"})
-          <div class="captcha-refresh"><a href="#"><span>Try another text</span></a></div>
-        </div>
+      <div class="form-group__item">
+        @@include("_tpl_forms_input.html", {
+        "label": "Email:",
+        "id": "uf-email",
+        "type": "email",
+        "placeholder": "Enter Your Email"
+        })
+        @@include("_tpl_forms_valid.html", {"error": "Please enter a valid email address"})
       </div>
     </div>
     <br>
-    <div class="input-wrap">
-      <div class="form-buttons">
-        <button class="btn-default">Send</button>
-        <input class="btn-default-alt" type="reset" value="Clear">
-      </div>
-      <div class="form-note">
-        <div class="form-note__item"><span class="form-mark">*</span> Поля обязательны для заполнения</div>
+
+    <label for="form-captcha">Security Check:<span class="form-mark">*</span></label>
+    <div class="form-unit">
+      <div class="captcha">
+        <img src="img/captcha.jpg" alt="captcha" />
+        @@include("_tpl_forms_input.html", {
+        "label": "",
+        "id": "form-captcha",
+        "placeholder": "Enter Your Name"
+        })
+        @@include("_tpl_forms_valid.html", {"error": "Enter text in this image", "success": "The verification was successful!"})
+        <div class="captcha-refresh"><a href="#"><span>Try another text</span></a></div>
       </div>
     </div>
+    <br>
+
+    @@include("_tpl_btn.html", {"type": "button!", "value": "SEND"})
   </form>
 </div>
